Fix projects/contact page on mobile.

--- a/contact/style.scss
+++ b/contact/style.scss
@@ -82,9 +82,12 @@ header
 
 section
 {
-	margin: auto 0;
+	flex: 6;
 	display: flex;
-	flex-flow: column nowrap;
+	flex-direction: column;
+	align-items: flex-end;
+	justify-content: center;
+	overflow: hidden;
 
 	a:hover
 	{
@@ -119,6 +122,11 @@ section
 		width: 100%;
 		height: 100%;
 	}
+}
+
+footer
+{
+	flex: 2;
 }
 
 @media only screen and (min-width: 2744px)
@@ -249,6 +257,15 @@ section
 // start mobile design
 @media only screen and (max-width: 706px)
 {
+
+	section
+	{
+		h1
+		{
+			padding-right: 17px;
+		}
+	}
+
 	#avatar
 	{
 		width: 300px;
